<resources>
    <string name="app_name">LTGameSDK</string>

    <string name="text_login_way">Please select login method</string>
    <string name="text_privacy">Read &amp; Accept the </string>
    <string name="text_agreement">Read &amp; Accept the</string>
    <string name="text_login">Login</string>
    <string name="text_facebook">Sign in with Facebook</string>
    <string name="text_google">Sign in with Google</string>
    <string name="text_into_game">Start Game</string>
    <string name="text_parameter_error">Wrong parameter</string>
    <string name="text_login_failed">Login failed, please try again	</string>
    <string name="txt_default">default</string>
    <string name="txt_attention">Notification</string>
    <string name="text_user_privacy"><![CDATA[User Agreement   &\n  Privacy Policy]]></string>
    <string name="text_sure">OK</string>
    <string name="text_logout">Sign out</string>
    <string name="text_seal_number">This account has been suspended, please contact Customer Service.</string>
    <string name="text_sealing_equipment">This is the device that was blocked. Please contact customer service.</string>
    <string name="text_login_visitor">Guest</string>
    <string name="text_login_email">Email</string>
    <string name="text_privacy_detail">Privacy Policy</string>
    <string name="text_agreement_detail">User Agreement</string>
    <string name="text_sure_guest">Are you sure to login \n as a guest?</string>
    <string name="text_guest_content">\t\t\t\t\t If you login as a guest, your account data will lose if you reinstall the game, switch device, upgrade system, and reset device.For your account safety, please bind in time.
                            </string>
    <string name="text_canceled">Cancel</string>
    <string name="text_turn_title">You are logging as a guest, for your account safety,please bind in time</string>
    <string name="text_login_continue">Continue</string>
    <string name="text_guest_bind">Bind</string>
    <string name="text_guest_switch">Switch Account</string>
    <string name="text_bind">Please select bind method</string>
    <string name="text_bind_failed">This account is already linked, please use another account to bind.</string>
    <string name="text_bind_content">Bind failed, please try again</string>
    <string name="text_back">Back</string>
    <string name="text_hint_email">Please input your email</string>
    <string name="text_hint_verification_code">Please input verification code</string>

    <string name="text_resend">重新获取</string>
    <string name="text_send">Send</string>

    <string name="text_bind_facebook">Bind to Facebook</string>
    <string name="text_bind_google">Bind to Google</string>
    <string name="text_bind_email">Bind to Email</string>
    <string name="text_loading">loading...</string>
    <string name="text_qq">QQ登录</string>
    <string name="text_wx">微信登录</string>
    <string name="text_bind_wx">绑定微信</string>
    <string name="text_bind_qq">绑定QQ</string>
</resources>
