<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_284"
    android:layout_height="@dimen/dp_370"
    android:layout_gravity="center"
    android:background="@drawable/bg_fragment"
    android:gravity="center">


    <RelativeLayout
        android:id="@+id/ryt_guest_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_50"
        android:gravity="center">

        <Button
            android:id="@+id/btn_guest_cancel"
            android:layout_width="@dimen/dp_87"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_light_blue_corner"
            android:text="@string/text_canceled"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />

        <Button
            android:id="@+id/btn_guest_continue"
            android:layout_width="@dimen/dp_87"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_28"
            android:layout_toRightOf="@+id/btn_guest_cancel"
            android:background="@drawable/btn_light_blue_corner"
            android:text="@string/text_sure"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_10" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txt_guest_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_title"
        android:layout_marginTop="@dimen/dp_9"
        android:gravity="center"
        android:text="@string/text_login_way"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_10"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_guest_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guest_title"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_18"
        android:gravity="center_horizontal"
        android:text="@string/text_guest_content"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_10"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/txt_guest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/text_sure_guest"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold" />


</RelativeLayout>
