<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_284"
    android:layout_height="@dimen/dp_370"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/text_login"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/txt_login_failed_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_9"
        android:gravity="center"
        android:text="@string/text_login_way"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_10" />

    <LinearLayout
        android:id="@+id/lyt_login_failed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_31"
        android:background="@drawable/layout_white_corner"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/error" />

        <TextView
            android:id="@+id/txt_login_failed_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/dp_20"
            android:gravity="center_vertical"
            android:text="@string/text_login_failed"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>

    <com.gentop.ltsdk.ltsdkui.ui.ProgressView
        android:id="@+id/pgb_loading"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_13"
        android:visibility="gone"
        app:dot_color="@color/colorBlue"
        app:dot_count="4" />


</LinearLayout>
